# cubscoutawards

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-cloud-run.yml  publish-ghcr.yml
dev/: __init__.py  fill_cub_scout_certs.py  fill_cub_scout_rank_cards.py
dev/cert_form_ui/: __init__.py  adventures.html  app.js  cub_scout_award_template.csv  index.html  nav.js  rank_template.csv  ranks.html  ranks.js  server.py  styles.css  wolf_rank_template.csv
scripts/: smoke_test_generate.py
